--- a/e_com_vue/package.json
+++ b/e_com_vue/package.json
@@ -7,6 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fortawesome/vue-fontawesome": "^3.0.0-3",
+    "bulma": "^0.9.2",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
