--- a/e_com_vue/package.json
+++ b/e_com_vue/package.json
@@ -7,10 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/vue-fontawesome": "^3.0.0-3",
+    "axios": "^0.21.1",
     "bulma": "^0.9.2",
     "core-js": "^3.6.5",
+    "postcss": "^8.2.14",
     "vue": "^3.0.0",
+    "vue-cli": "^2.9.6",
+    "vue-fontawesome": "0.0.2",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
@@ -22,5 +27,9 @@
     "@vue/compiler-sfc": "^3.0.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2"
-  }
+  },
+  "description": "## Project setup ``` npm install ```",
+  "main": "babel.config.js",
+  "author": "",
+  "license": "ISC"
 }
